gradle build fixed